lib/tests/fixtures/compiler/parser/next_in_resource_decl.baseline
Error: next_in_resource_decl.pp:3:26: next statement cannot be used inside a resource declaration expression.
  bar => if true { next }
                   ^~~~
