lib/tests/fixtures/compiler/parser/next_in_resource_decl.pp
[].each |$x| {
    file { foo:
        bar => if true { next }
    }
}
